[package]
name = "git_file_history"
version = "0.1.0"
authors = ["cong wu <1875486458@qq.com>"]

[dependencies]
error-chain = "0.11.0"
serde = "1.0.15"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde","rustc-serialize"] }

[lib]
name = "git_file_history"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/bin/main.rs"